<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteSmoke">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/imageView"
        android:src="@drawable/magic_unicorn"
        android:layout_gravity="center"
        android:gravity="center|bottom"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="50dp"
        android:layout_weight="3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/Black"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center|top"/>

    <LinearLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        >

        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/user_name_edittext"
            />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/password_edittext"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/login_button"
        android:gravity="center"
        />

</LinearLayout>