<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/WhiteSmoke">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/magic_unicorn"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/version_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="72dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/app_name_textview"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="@dimen/app_name"
        android:layout_above="@+id/version_textview"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/version"
        android:id="@+id/version_textview"
        android:textColor="@color/Gray"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/version"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/developer"
        android:id="@+id/developer_textview"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/Gray"/>

</RelativeLayout>